syntax = "proto3";

package v2ray.core.app.porter.config;
option csharp_namespace = "V2Ray.Core.App.Porter.Config";
option go_package = "config";
option java_package = "com.v2ray.core.app.porter.config";
option java_multiple_files = true;

message Compression{
    bool enable = 1;
    int32 compress_algo = 2;
    int32 file_size = 3;
}

message Config {
    string interface_name = 1;
    string inner_ip = 2;
    string public_ip = 3;
    int32 random_port_begin = 4;
    int32 random_port_range = 5;
    int32 u_port = 6;
    int32 k_port = 7;
    int32 q_port = 8;
    int32 t_port = 9;
    int32 port_timeout = 10;
    uint32 network_id =11;
    string pub_key = 12;
    int32 write_buffer_size = 13;
    string log_dir = 14;
    int32 log_level = 15;
    string porter_db_path = 16;
    Compression compression = 17;
    string protocol = 18;
}
